--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "@types/node": "^16.18.3",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
+    "axios": "^1.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-event-stream": "^1.1.8",
     "react-scripts": "5.0.1",
+    "rxjs": "^7.5.7",
     "typescript": "^4.9.3",
     "web-vitals": "^2.1.4"
   },
